# scikit-learn

./: .gitignore  bench.py  bin_mapper_fit_timings.csv  dataloaders.py  dt.py  forest.py  test.ipynb  test.py  test_binsortdt.py  test_binsortdt_debug.py  test_binsortdt_verify.py  test_forest_large.py  test_forest_weights.py
benchmarks/: bench_np_sort_joblib_threads.py  profile_bin_mapper_fit.py  run_bin_mapper_fit_profiles.py
benchmarks/rf_intelex/: bench_rf_fit.py
doc/modules/: tree.rst
reports/rf_intelex/: benchmark_report.md  optimization_experiments.md  sklearnex_strategy_notes.md
sklearn/: calibration.py  dummy.py
sklearn/_loss/: loss.py
sklearn/cytree/: criterion.py  feature.py
sklearn/ensemble/: _forest.py  _gb.py  _gradient_boosting.pyx
sklearn/ensemble/_hist_gradient_boosting/: _binning.pyx  _gradient_boosting.pyx  _predictor.pyx  binning.py  gradient_boosting.py  grower.py  histogram.pyx  meson.build  predictor.py  splitting.pyx
sklearn/ensemble/_hist_gradient_boosting/tests/: test_binning.py  test_gradient_boosting.py  test_grower.py  test_monotonic_constraints.py  test_predictor.py  test_splitting.py
sklearn/linear_model/: _base.py  _linear_loss.py  _ridge.py
sklearn/metrics/: _regression.py
sklearn/preprocessing/: _discretization.py  _encoders.py  _polynomial.py  _target_encoder.py
sklearn/presortedtree/: bench.py  binsortdt.py  criterion.py  dt.py  feature.py  forest.py  sort.py  test.py
sklearn/tests/: test_dummy.py
sklearn/tree/: README.md  _classes.py  _criterion.pxd  _criterion.pyx  _partitioner.pxd  _partitioner.pyx  (+5 more)
(+48 files in other folders)
